bottom scrollbar fixed
overflow issue solved

--- a/css/Main.css
+++ b/css/Main.css
@@ -1,6 +1,10 @@
 body{
 	background-color: #F2F5ED;
 	font-family: 'Lato', sans-serif;
+ 	overflow: -moz-scrollbars-vertical;
+ 	overflow-x: hidden;
+ 	overflow-y: scroll;
+
 }
 h1 {
 	font-family: 'Lato', sans-serif;
